--- a/index.html
+++ b/index.html
@@ -208,10 +208,23 @@
           <h1  class='services'>- Services -</h1>
       </div>
       <div class="paragraph">
-        <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).
-  </p>
-  <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).
-</p>
+        <p>Creating software solutions to fit your needs
+        providing systems that make businesses more efficient,
+        effective, and cost aware.</p>
+
+        <p>solutions include, branding and website face lifts bringing
+        businesses a cleaner more modern look, system software needs
+        such as, licensing renewal, inventory management, order processing
+        and much more.</p>
+
+        <p>Offering a maintence program so you never have to worry about
+        issues and errors with in your website or system. Based of a monthly
+        subscription in order to provide the best services possible keeping
+        businesses websites up and businesses systems strong.</p>
+
+        <p>Our goals is to provide our clients with the best solutions, creating
+        strong relationship and smiling faces. Making our clients website, branding,
+        and system needs our responsibilty so they can focus on running their business.</p>
       </div>
     </div>
     <div class="col-sm">
