--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
           <h1 class="section_headers d-flex justify-content-center">— Contact —</h1>
         </div>
       </div>
-      <div class="row d-flex justify-content-center" action="contact_form.php">
+      <div class="row d-flex justify-content-center" >
         <div class="col-md-4">
           <label for="First" class="form-label">First</label>
           <input type="text" name="FNAME" id="FNAME" class="form-control" placeholder="First name" aria-label="First">
@@ -327,7 +327,7 @@
       </div>
       <div class="d-flex justify-content-center row">
         <div class="btn_column col-md-2">
-          <input class="btn" type="submit" value="Submit" name="">
+          <input class="btn" type="submit" value="Submit" name="" action="contact_form.php">
         </div>
       </div>
     </section>
