--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
         <a class="navbar-brand logo" href="#">
           <img id="head_logo" src="images/logo_2_text.png" alt="">
         </a>
-        <!-- <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
         <i class="fa fa-solid fa-bars"></i>
-        </button> -->
+        </button>
         <div class=" justify-content-end collapse navbar-collapse" id="navbarToggleExternalContent">
           <ul class="navbar-nav">
             <li class="nav-item">
