--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
           <img class="top_icon users" src="images/users-solid.svg" alt="">
       </div>
       <div class="d-flex justify-content-center">
-        <h4>Who We Are</h4>
+        <h4>Who We Are blah blah blah</h4> 
       </div>
 
         <div class="d-flex justify-content-center text-center">
