--- a/index.html
+++ b/index.html
@@ -69,15 +69,15 @@
           <img class="top_icon users" src="images/users-solid.svg" alt="">
       </div>
       <div class="d-flex justify-content-center">
-        <h4>Who We Are blah blah blah</h4> 
+        <h4>Who We Are</h4>
       </div>
 
         <div class="d-flex justify-content-center text-center">
-        <p>A small software development company based in Cheyenne, WY </p>
+        <p>We are a small group of Wyoming natives looking to improve small businesses in all communities by optimizing their online presence.</p>
       </div>
         <div class="d-flex justify-content-center">
           <a href="#aboutSection">
-          <button class ='btn buttons lmbtn' type="button" name="button">
+          <button class ='btn buttons btn-lg lmbtn' type="button" name="button">
             Learn More
           </button>
         </a>
@@ -97,7 +97,7 @@
       </div>
       <div class="d-flex justify-content-center">
         <a href="#serviceSection">
-        <button class ='btn buttons osbtn' type="button" name="button">
+        <button class ='btn buttons btn-lg osbtn' type="button" name="button">
             Our Services
         </button>
       </a>
@@ -117,7 +117,7 @@
       </div>
       <div class="d-flex justify-content-center">
         <a href="#processes">
-          <button class ='btn buttons probtn' type="button" name="button">
+          <button class ='btn buttons btn-lg probtn' type="button" name="button">
               Our Process
           </button>
         </a>
@@ -219,25 +219,21 @@
       <div class="d-flex justify-content-center">
           <h1  class='services'>- Services -</h1>
       </div>
-      <div class="paragraph">
-        <p>Creating software solutions to fit your needs
-        providing systems that make businesses more efficient,
-        effective, and cost aware.</p>
-
-        <p>Solutions include branding and website face lifts, bringing
-        businesses a cleaner more modern look, system software needs
-        such as, licensing renewal, inventory management, order processing
-        and much more.</p>
-
-        <p>Offering a maintence program so you never have to worry about
-        issues and errors with your website or system. This is based off a monthly
-        subscription in order to provide the best services possible, keeping
-        websites up and business systems strong.</p>
-
-        <p>Our goals is to provide our clients with the best solutions, creating
-        strong relationships and smiling faces. Making our clients website, branding,
-        and system needs can be our responsibilty so they can focus on running
-        their business.</p>
+      <div class="d-flex justify-content-center">
+        <div class="paragraph">
+          <p>Creating software solutions to fit your needs
+          providing systems that make businesses more efficient,
+          effective, and cost aware.Solutions include branding and website face lifts, bringing
+          businesses a cleaner more modern look, system software needs
+          such as, licensing renewal, inventory management, order processing
+          and much more.<br>Offering a maintence program so you never have to worry about
+          issues and errors with your website or system. This is based off a monthly
+          subscription in order to provide the best services possible, keeping
+          websites up and business systems strong.<br>Our goals is to provide our clients with the best solutions, creating
+          strong relationships and smiling faces. Making our clients website, branding,
+          and system needs can be our responsibilty so they can focus on running
+          their business.</p>
+        </div>
       </div>
     </div>
     <div class="col-sm">
@@ -247,13 +243,13 @@
     </div>
 
   </div>
-
+</div>
 
   <!-- ########## END OF KYLES SECTION ##########-->
 
   <!-- ########## START OF PROCESSES SECTION ########## -->
 
-    <section id="processes">
+    <section id="process">
       <div class="container">
         <div class="row">
           <h1 class="section_headers d-flex justify-content-center">— Our Process —</h1>
@@ -304,7 +300,11 @@
 
     <section id="contact">
       <div class="container">
-        <form class="" action="contact_form.php" method="post">
+        <div class="row justify-content-center">
+          <button type="button" class="btn col-md-4 btn-lg" name="Contact Now"><a href="mailto:sudobytesolutions@sudobye.com? subject=Project Inquary">Contact Now</a></button>
+        </div>
+      </div>
+        <!-- <form class="" action="contact_form.php" method="post">
         <div class="row">
           <h1 class="section_headers d-flex justify-content-center">— Contact —</h1>
         </div>
@@ -336,7 +336,7 @@
           <input class="btn" type="submit" value="Submit" name="" action="contact_form.php">
         </div>
       </div>
-    </form>
+    </form> -->
     </section>
 
   <!-- ########## END OF CONTACT SECTION ########## -->
