--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   </head>
   <body>
   <section id="header">
-    <nav class="navbar navbar-expand-lg fixed-top">
+    <nav class="navbar navbar-expand-lg fixed-top bg-dark bg-opacity-25">
       <div class=" container-fluid">
         <a class="navbar-brand logo" href="#">
           <img id="head_logo" src="images/logo_2_text.png" alt="">
